mobile drawer button spacing fix

--- a/src/components/sidebar/sidebarButton.css
+++ b/src/components/sidebar/sidebarButton.css
@@ -45,6 +45,6 @@ a {
   }
 
   a {
-    padding: 5%;
+    padding: 2%;
   }
 }
